# hume-python-sdk

./: .fernignore  .gitignore  CITATIONS.md  LICENSE  README.md  mkdocs.yml  mypy.ini  pylintrc  pyproject.toml  reference.md  requirements.txt  sitemap.xml  versions.json
.fern/: metadata.json
.github/: common-ci-python.yaml  humeai-sdk-ci.yaml  publish-package.yaml
.github/workflows/: ci.yaml  ci.yml  legacy_ci.yaml  legacy_ci.yml  notify-slack-on-release.yml
.mock/: dependencies.yml  fern.config.json  generators.yml
.mock/definition/: api.yml
0.1.1/: 404.html  index.html  objects.inv
0.1.1/batch-reference/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/batch-reference/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/search/: search_index.json
0.1.4/: 404.html  index.html  objects.inv  sitemap.xml
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  objects.inv  sitemap.xml
0.1.5/search/: search_index.json
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/search/: search_index.json
0.1.7/: 404.html  index.html  objects.inv  sitemap.xml
0.1.7/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/search/: search_index.json
0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1/search/: search_index.json
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/search/: search_index.json
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/search/: search_index.json
0.3.3/stylesheets/: extra.css
0.3.4/: 404.html  index.html  sitemap.xml
0.3.4/search/: search_index.json
0.3.5/: 404.html  index.html  sitemap.xml
0.3.5/search/: search_index.json
0.3.6/: 404.html  index.html  sitemap.xml
0.3.6/search/: search_index.json
0.3.7/: 404.html  index.html  sitemap.xml
0.3.7/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/search/: search_index.json
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/search/: search_index.json
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/search/: search_index.json
0.7.1/: 404.html  index.html  sitemap.xml
0.7.1/search/: search_index.json
batch-reference/: index.html
docs/: batch-reference.md  index.md  streaming-reference.md
docs/batch/: batch-job-details.md  batch-job-result.md  batch-job-state.md  batch-job-status.md  batch-job.md  hume-batch-client.md  transcription-config.md
docs/config/: burst-config.md  face-config.md  facemesh-config.md  language-config.md  ner-config.md  prosody-config.md
docs/stream/: hume-stream-client.md  stream-socket.md
docs/voice/: hume-voice-client.md  microphone-interface.md  voice-chat.md  voice-config.md  voice-socket.md
examples/: .gitignore  README.md
examples/batch-facial-action-coding-system/: batch-facial-action-coding-system.ipynb
examples/batch-foreign-language-transcription/: batch-foreign-language-transcription.ipynb
examples/batch-specified-language-transcription/: batch-specified-language-transcription.ipynb
examples/batch-text-entity-recognition/: batch-text-entity-recognition.ipynb  obama.txt
examples/batch-text-sentiment-analysis/: batch-text-sentiment-analysis.ipynb  utilities.py
examples/batch-text-toxicity-detection/: batch-text-toxicity-detection.ipynb  utilities.py
examples/batch-voice-expression/: batch-voice-expression.ipynb
examples/evi-using-configs/: evi-using-configs.ipynb
examples/stream-anonymized-facemesh/: stream-anonymized-facemesh.ipynb  utilities.py
examples/stream-face-expression/: stream-face-expression.ipynb  utilities.py
examples/stream-text-emotion/: stream-text-emotion.ipynb  utilities.py
examples/stream-voice-expression/: stream-voice-expression.ipynb  utilities.py
hume/: __init__.py
hume/_batch/: __init__.py  batch_job.py  batch_job_details.py  batch_job_info.py  batch_job_result.py  batch_job_state.py  batch_job_status.py  hume_batch_client.py  transcription_config.py
hume/_common/: api_type.py  client_base.py  config_base.py  config_utils.py  hume_client_exception.py  protocol.py  retry_utils.py
hume/_stream/: __init__.py  hume_stream_client.py  stream_socket.py
hume/_voice/: __init__.py  audio_player.py  hume_voice_client.py  session_settings.py  socket_inputs.py  voice_socket.py
hume/batch/: __init__.py  batch_job.py  batch_job_result.py  hume_batch_client.py
hume/common/: api_type.py  client_base.py  hume_client_error.py  model_type.py  retry_utils.py
hume/config/: __init__.py
hume/error/: hume_client_exception.py
hume/models/: __init__.py  model_type.py
hume/stream/: hume_stream_client.py
latest/: 404.html  index.html
latest/batch-reference/: index.html
search/: search_index.json
src/hume/: __init__.py  _default_clients.py  base_client.py  client.py  client.py.diff  environment.py  legacy.diff  version.py
tests/: __init__.py  conftest.py  pytest.ini  test_aiohttp_autodetect.py  test_version.py  utilities.py
tests/audio/: __init__.py  audio_test_suite.py  sample.pcm
tests/batch/: test_batch_client.py  test_batch_client_service.py  test_batch_job.py  test_batch_job_details.py  test_batch_job_info.py  test_batch_job_result.py  test_batch_job_state.py  test_batch_job_status.py  test_hume_batch_client.py  test_hume_batch_client_service.py  test_service_hume_batch_client.py  test_transcription_config.py
tests/common/: test_model_type.py
tests/custom/: conftest.py  pytest.ini  test_client.py  test_hume_wss_client.py  test_lazy_imports.py
tests/custom_models/: test_datasets.py  test_files.py  test_jobs.py  test_models.py
tests/empathic_voice/: test_chats.py  (+6 more)
wiremock/: wiremock-mappings.json
(+1233 files in other folders)
