[tool.poetry]
authors = []
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]
description = "A Python SDK for Hume AI"
keywords = [
    "hume",
    "ai",
    "evi",
    "empathic",
    "multimodal",
    "expression",
    "analysis",
    "sentiment",
    "voice",
    "recognition",
    "detection",
    "emotion",
    "interface",
    "speech",
    "audio",
    "vision",
    "expressive",
    "embeddings",
    "communication",
    "learning",
]
license = "MIT"
name = "hume"
packages = [{ include = "hume", from = "src" }]
readme = "README.md"
version = "0.7.0-rc2"

[project.urls]
Documentation = 'hhttps://dev.hume.ai/reference'
Homepage = 'https://www.hume.ai/'
Repository = 'https://github.com/HumeAI/hume-python-sdk'

[tool.poetry.dependencies]
aiofiles = "^24.1.0"
eval-type-backport = "^0.2.0"
httpx = ">=0.21.2"
jupyter = { version = "^1.0.0", optional = true }
pydantic = ">= 1.9.2"
pydantic-core = "^2.18.2"
pydub = { version = "^0.25.1", optional = true }
python = ">=3.9,<4"
simpleaudio = { version = "^1.0.4", optional = true }
sounddevice = { version = "^0.4.6", optional = true }
typing_extensions = ">= 4.0.0"
websockets = "12.0"

[tool.poetry.dev-dependencies]
covcheck = { version = "^0.4.3", extras = ["toml"] }
mypy = "1.0.1"
pydocstyle = "^6.1.1"
pydub-stubs = "^0.25.1"
pylint = "^2.16.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.0.0"
python-dateutil = "^2.9.0"
ruff = "^0.5.6"
semver = "^2.13.0"
testbook = "^0.4.2"
types-aiofiles = "^24.1.0.20240626"
types-python-dateutil = "^2.9.0.20240316"

[tool.poetry.extras]
examples = ["jupyter"]
legacy = ["pydub"]
microphone = ["simpleaudio", "sounddevice"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.covcheck.group.unit.coverage]
branch = 40.0
line = 60.0

[tool.covcheck.group.service.coverage]
branch = 50.0
line = 70.0

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
